# disateq-vendor

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  ateQ-DEVProyectosdisateq-vendorappsvendor-desktop  package-lock.json  repo-tree.txt  seed_farmacia_prueba.sql
apps/vendor-desktop/: AGENTS.md  index.html  package-lock.json  package.json
apps/vendor-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/vendor-desktop/src-tauri/capabilities/: default.json
apps/vendor-desktop/src-tauri/src/: lib.rs  thermal.rs
apps/vendor-desktop/src-tauri/src/commands/: bloques.rs  catalogo_maestro.rs  comprobantes.rs  db_commands.rs  ingresos.rs  integraciones.rs  log.rs  lotes.rs  mod.rs  movimientos.rs  operadores.rs  pedidos.rs  presentaciones.rs  productos.rs  proveedores.rs  reportes.rs  servicios.rs  sesion_caja.rs  valores.rs  ventas.rs
apps/vendor-desktop/src-tauri/src/db/: migrations.rs  mod.rs  schema.rs  seed_principios.rs
docs/: ARQUITECTURA_UX.md  DOCTRINA.md  INDICE.md  codex.md
docs/00-governance/: BITACORA_DECISIONES.md  BITACORA_HISTORICA.md  ESTANDARES_TECNICOS.md  GLOSARIO.md  reglas.md
docs/01-vision/: principios.md
docs/02-workflow/: entorno-dev.md
docs/03-arquitectura/: ARQUITECTURA_SYNC.md  arquitectura.md
docs/03-frontend/: ux-pos-operacional.md
docs/06-ux/: principios-ux.md  resolucion-operacional.md
docs/_obsoleto/: README.md
docs/architecture/: CONTEXTUAL_OPERATIONAL_MODEL.md  bloque-operacional.md  cash-close-flow.md  cash-movements-model.md  cash-runtime-recovery.md  cash-turno-operational-model.md  (+2 more)
(+230 files in other folders)
